kubernetes/dev/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: i27-helpdesk-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: asia-south1-docker.pkg.dev/i27-helpdesk-manoj-2026/i27-helpdesk/ui:v1
          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: i27-helpdesk-dev
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports":{"80":"ui-backendconfig"}}'
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
    - port: 80
      targetPort: 3000
